[package]
name = "boilerrate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenv = "0.15.0"
headers = "0.4.1"
hmac = "0.12.1"
jwt = "0.16.0"
lettre = "0.11.18"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
supabase_rs = "0.4.15"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
